# serverless-discord

./: .clang  .gitignore  CMakeLists.txt  README.md  main.cpp  main.tf  make_slash_commands.py  openapi.yaml  pyproject.toml
src/: discord.cpp  discord.h  ed25519.cpp  ed25519.h  handler.cpp  handler.h  main.cpp  utils.cpp  utils.h
tests/: test_discord.cpp  test_ed25519.cpp  test_handler.cpp
